crates/forge_provider/src/open_router/snapshots/forge_provider__open_router__request__tests__tool_message_typescript_code.snap
---
source: crates/forge_provider/src/open_router/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "<forge_tool_result><forge_tool_name>rust_tool</forge_tool_name><success><![CDATA[---\ntype: Generic\ncontent: '{ \"code\": \"fn main<T>(gt: T) {let b = &gt; }\"}'\n---\n{ \"code\": \"fn main<T>(gt: T) {let b = &gt; }\"}]]></success></forge_tool_result>",
  "name": "rust_tool",
  "tool_call_id": "456"
}
