crates/forge_provider/src/open_router/snapshots/forge_provider__open_router__request__tests__user_message_conversion.snap
---
source: crates/forge_provider/src/open_router/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Hello"
}
